@@ -1,3 +1,11 @@
+globus-gssapi-gsi (13.9-1+gt6.@distro@) @distro@; urgency=low
+
+  * Set the default minimum TLS version to 1.2.  1.0 and 1.1 are deprecated.
+  * Set the maximum TLS version default to 1.2.  1.3 is not yet supported.
+  * use 2048 bit keys to support openssl 1.1.1
+
+ -- Globus Toolkit <support@globus.org>  Mon, 27 Aug 2018 12:41:40 -0500
+
 globus-gssapi-gsi (13.8-1+gt6.@distro@) @distro@; urgency=low
 
   * Fix version guard
